# serde-repr

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  parse.rs  util.rs
src/parse/: mod.rs  repr.rs  serde_other.rs  serde_style.rs
src/transform/: generic.rs  mod.rs  variant.rs
tests/: compiletest.rs  test.rs
tests/ui/: empty_enum.rs  empty_enum.stderr  implicit_discriminant.rs  implicit_discriminant.stderr  internally_tagged_newtype.rs  internally_tagged_newtype.stderr  missing_repr.rs  missing_repr.stderr  mixed_others_untagged.rs  mixed_others_untagged.stderr  multiple_others.rs  multiple_others.stderr  non_unit_variant.rs  non_unit_variant.stderr  not_enum.rs  not_enum.stderr  repr_c.stderr
