[package]
name = "serde_repr"
version = "0.1.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Derive Serialize and Deserialize that delegates to the underlying repr of a C-like enum."
repository = "https://github.com/dtolnay/serde-repr"
documentation = "https://docs.rs/serde_repr"
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "0.6"
syn = "0.15"

[dev-dependencies]
select-rustc = "0.1"
serde = "1.0"
serde_json = "1.0"
trybuild = "1.0"
