[package]
name = "serde_repr"
version = "0.1.12"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["encoding", "no-std"]
description = "Derive Serialize and Deserialize that delegates to the underlying repr of a C-like enum."
documentation = "https://docs.rs/serde_repr"
edition = "2018"
keywords = ["serde", "serialization", "integer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/serde-repr"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
rustversion = "1.0"
serde = "1.0"
serde_json = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
